# fragmetric-contracts

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  Makefile  README.md  id.dummy.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
clients/rust/fragmetric-cpi/: Cargo.toml
clients/rust/fragmetric-cpi/idls/: fragmetric_restaking.json  fragmetric_restaking_devnet.json
clients/rust/fragmetric-cpi/src/: lib.rs
clients/rust/fragmetric-restaking/: Cargo.toml
clients/rust/marinade/: Cargo.toml
programs/dummy/: Cargo.toml
programs/dummy/src/: lib.rs  security.rs
programs/dummy/src/instructions/: create_user_account.rs  mod.rs  update_user_account.rs
programs/dummy/src/versioning/: data.rs  mod.rs
programs/restaking/: Cargo.toml
programs/restaking/src/: constants.rs  error.rs  errors.rs  lib.rs  utils.rs
programs/restaking/src/common/: mod.rs  verify.rs
programs/restaking/src/constants/: common.rs  devnet.rs  local.rs  mainnet.rs  mod.rs
programs/restaking/src/events/: admin_updated_reward_pool.rs  fund_manager_updated_fund.rs  fund_manager_updated_reward_pool.rs  mod.rs  operator_claimed_remaining_reward.rs  operator_donated_to_fund.rs  operator_processed_job.rs  operator_ran.rs  operator_ran_fund.rs  operator_ran_fund_command.rs  operator_updated_fund_price.rs  operator_updated_fund_prices.rs  operator_updated_normalized_token_pool_prices.rs  operator_updated_reward_pools.rs  user_canceled_withdrawal_request_from_fund.rs  user_claimed_reward.rs  user_closed_fund_account.rs  user_closed_reward_account.rs  user_created_or_updated_fund_account.rs  user_created_or_updated_reward_account.rs  user_delegated_reward_account.rs  user_deposited_sol_to_fund.rs  user_deposited_supported_token_to_fund.rs  user_deposited_to_fund.rs  user_deposited_to_vault.rs  user_deposited_token_to_fund.rs  user_requested_withdrawal_from_fund.rs  user_transferred_receipt_token.rs  user_unwrapped_receipt_token.rs  user_updated_fund_price.rs  user_updated_reward_pool.rs  user_withdrew_from_fund.rs  user_withdrew_sol_from_fund.rs  user_withdrew_supported_token_from_fund.rs  user_wrapped_receipt_token.rs
programs/restaking/src/fund/: common.rs  deposit.rs  initialize.rs  mod.rs  update.rs  update_token.rs  withdraw.rs
programs/restaking/src/instructions/: add_reward.rs  add_reward_pool.rs  add_reward_pool_holder.rs  add_supported_token.rs  admin_empty_context.rs  admin_fund_context.rs  admin_fund_wrap_context.rs  admin_normalized_token_mint_context.rs  admin_normalized_token_pool_context.rs  admin_receipt_token_mint_context.rs  admin_reward_context.rs  admin_user_reward_context.rs  cancel_withdrawal_request.rs  close_reward_pool.rs  deposit_lst.rs  deposit_sol.rs  deposit_token.rs  ensure_reward_account.rs  fund_initialize.rs  fund_manager_fund_context.rs  fund_manager_fund_distributing_reward_token_context.rs  fund_manager_fund_jito_restaking_vault_context.rs  fund_manager_fund_jito_restaking_vault_operator_context.rs  fund_manager_fund_normalized_token_context.rs  fund_manager_fund_restaking_vault_context.rs  fund_manager_fund_reward_token_context.rs  fund_manager_fund_solv_btc_vault_context.rs  fund_manager_fund_supported_token_context.rs  fund_manager_fund_token_swap_strategy_context.rs  fund_manager_fund_wrapped_token_context.rs  fund_manager_normalized_token_pool_supported_token_context.rs  fund_manager_restaking_vault_reward_context.rs  fund_manager_reward_context.rs  fund_update_token.rs  initialize.rs  initialize_fund_account.rs  initialize_fund_supported_token_accounts.rs  initialize_fund_user_accounts.rs  initialize_payer_account.rs  initialize_reward_account.rs  (+26 more)
programs/restaking/src/modules/: mod.rs
programs/restaking/src/operator/: mod.rs  run.rs
programs/restaking/src/reward/: initialize.rs  mod.rs  settle.rs  update.rs
programs/restaking/src/token/: burn.rs  mint.rs  mod.rs  transfer.rs
programs/restaking/src/utils/: custom_account.rs  deserialize_if_exist.rs  init_if_needed_by_pda.rs  init_if_needed_by_user.rs  mod.rs  system_program.rs
programs/restaking/tests/: deposit_sol.rs  frag2.init.ts  frag2.test.ts  fragbtc.deposit.ts  fragbtc.init.ts  fragbtc.operation.ts  fragbtc.test.config.ts  fragbtc.test.deposit.ts  fragbtc.test.pegging.ts  fragbtc.test.ts  fragbtc.ts  fragbtc.unit.test.ts  fragbtc_config.test.ts  fragbtc_deposit.test.ts  fragjto.config.ts  fragjto.init.ts  fragjto.test.config.ts  fragjto.test.ts  fragjto.ts  fragjto.unit.init.ts  fragjto.unit.test.ts  fragjto_config.test.ts  fragsol.deposit.ts  fragsol.init.ts  fragsol.playground.ts  fragsol.test.config.ts  fragsol.test.deposit.ts  fragsol.test.ts  fragsol.ts  fragsol.unit.init.ts  fragsol.unit.test.ts  fragsol_config.test.ts  fragsol_deposit.test.ts  fragsol_playground.test.ts  fragsquare.init.ts  fragsquare.test.ts  fragswtch.init.ts  fragswtch.test.ts  fragusd.init.ts  fragusd.unit.test.ts  (+4 more)
programs/restaking/tests/__snapshots__/: frag2.test.ts.snap  fragbtc.test.ts.snap  fragbtc_config.test.ts.snap  fragjto.test.ts.snap  fragjto_config.test.ts.snap  fragsol.test.ts.snap  fragsol_config.test.ts.snap  fragsquare.test.ts.snap  fragswtch.test.ts.snap
programs/restaking/tests/mocks/: BNSOL_mint.json  BNSOL_stake_pool.json  BNSOL_stake_pool_manager_fee.json  BNSOL_stake_pool_reserve_stake.json  BNSOL_stake_pool_validator_list.json  BNSOL_stake_pool_validator_stake_1.json  RoXSOL_mint.json  RoXSOL_stake_pool.json  RoXSOL_stake_pool_manager_fee.json  RoXSOL_stake_pool_reserve_stake.json  RoXSOL_stake_pool_validator_list.json  RoXSOL_stake_pool_validator_stake_1.json  USDC_mint.json  bSOL_mint.json  bSOL_stake_pool.json  bSOL_stake_pool_manager_fee.json  bbSOL_mint.json  (+177 more)
programs/solv/: Cargo.toml
programs/solv/src/: errors.rs  lib.rs
programs/solv/tests/: cbbtc.init.ts  cbbtc.test.ts  wbtc.init.ts  wbtc.test.ts  zbtc.init.ts  zbtc.test.config.ts  zbtc.test.ts
utils/fragmetric-util/: Cargo.toml
utils/fragmetric-util/src/: request.rs
utils/fragmetric-util/tests/: request.rs  upgradable.rs
(+863 files in other folders)
