[workspace]
members = [
    "programs/restaking",
    "programs/solv",
    "clients/rust/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
authors = ["Fragmetric Labs <contacts@fragmetric.xyz>"]
repository = "https://github.com/fragmetric-labs/contracts"
homepage = "https://fragmetric.xyz"
license = "MIT"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
anchor-spl = { version = "0.31.1", features = ["memo"] }
anyhow = "1.0.97"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", rev = "0cbf8f83012bd5d18183c45ed128302b4aee4dca" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", rev = "0cbf8f83012bd5d18183c45ed128302b4aee4dca" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", rev = "0cbf8f83012bd5d18183c45ed128302b4aee4dca" }
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
spl-discriminator = "0.4.1"
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
borsh1 = { package = "borsh", version = "1.5.5" } # This version is used in spl-stake-pool
proptest = "1.6.0"
primitive-types = "0.13.1"
once_cell = "1.21.3"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"

#borsh = "0.10.3"
#thiserror = "1"
#solana-program = "2"
#solana-sdk = "2"
#solana-program-test = "2"

marinade-cpi = { path = "./clients/rust/marinade-cpi" }
whirlpool-cpi = { path = "./clients/rust/whirlpool-cpi" }
