[workspace]
members = [
    "programs/restaking",
    "programs/solv",
    "clients/rust/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
authors = ["Fragmetric Labs <contacts@fragmetric.xyz>"]
repository = "https://github.com/fragmetric-labs/contracts"
homepage = "https://fragmetric.xyz"
license = "MIT"
readme = "README.md"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace.lints.clippy]
too-many-arguments = "allow"
module-inception = "allow"
inconsistent-digit-grouping = "allow"
enum-variant-names = "allow"
type-complexity = "allow"
only-used-in-recursion = "allow"
let-and-return = "allow"
wildcard-enum-match-arm = "deny"
comparison-chain = "allow"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["event-cpi"] }
anchor-spl = { version = "0.32.1", features = ["memo"] }
anyhow = "1.0.97"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
jito-vault-sdk = { git = "https://github.com/fragmetric-labs/solana-jito-restaking.git", rev = "f19bfb7d5660928bf624b1cd76b1f6acbdb38d96" }
jito-vault-core = { git = "https://github.com/fragmetric-labs/solana-jito-restaking.git", rev = "f19bfb7d5660928bf624b1cd76b1f6acbdb38d96" }
jito-bytemuck = { git = "https://github.com/fragmetric-labs/solana-jito-restaking.git", rev = "f19bfb7d5660928bf624b1cd76b1f6acbdb38d96" }
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
spl-discriminator = "0.4.1"
spl-stake-pool = { version = "2.0.3", features = ["no-entrypoint"] }
solana-stake-interface = { version = "1.2.1", features = ["bincode"] }
proptest = "1.6.0"
primitive-types-solana = "0.1.0"
once_cell = "1.21.3"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"

marinade-cpi = { path = "./clients/rust/marinade-cpi" }
whirlpool-cpi = { path = "./clients/rust/whirlpool-cpi" }
