[package]
name = "dummy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dummy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
fragmetric-util = { version = "0.0.0", path = "../../utils/fragmetric-util", features = ["derive"] }
solana-security-txt = "1.1.1"
