[package]
name = "restaking"
version = "0.4.0"
description = "Fragmetric Liquid Restaking Token Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

# anchor features
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

# own features
devnet = []
mainnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-bytemuck = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-stake-pool = { workspace = true }
marinade-cpi = { workspace = true }
whirlpool-cpi = { workspace = true }
# marinade-client = { workspace = true }
# whirlpool-client = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
