[package]
name = "restaking"
version = "0.6.4"
description = "Fragmetric Liquid Restaking Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

# anchor features
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

# own features
devnet = ["solv/devnet"]
mainnet = ["solv/mainnet"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
borsh1 = { workspace = true }
bytemuck = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-bytemuck = { workspace = true }
solv = { path = "../solv", features = ["cpi"] }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-discriminator = { workspace = true }
spl-stake-pool = { workspace = true }
marinade-cpi = { workspace = true }
whirlpool-cpi = { workspace = true }
primitive-types = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# solana-program-test = { workspace = true }
# solana-sdk = "2.2.1"
