[package]
name = "solv"
version = "0.4.2"
description = "Fragmetric SOLV BTC Vault Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

# anchor features
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = []
custom-heap = []
custom-panic = []

# own features
devnet = []
mainnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
