[package]
name = "fragmetric-util"
version = "0.0.0"
edition = "2021"
description = "Provides helpful utilities for writing fragmetric programs"

[dependencies]
fragmetric-util-derive = { version = "0.0.0", path = "../fragmetric-util-derive", optional = true }

[features]
derive = ["dep:fragmetric-util-derive"]

[[test]]
name = "request"
required-features = ["derive"]

[[test]]
name = "upgradable"
required-features = ["derive"]
