[package]
name = "fragmetric-cpi"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
bytemuck = { workspace = true }

[features]
devnet = []
