[package]
name = "fragmetric-cpi"
version = "0.5.1"
description = "Fragmetric program library for CPI and clients"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true }
bytemuck = { workspace = true }

[features]
devnet = []
