[package]
name = "fragmetric-restaking-client"
version = "0.1.0"
description = "Fragmetric Liquid Restaking Program Client"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }

[features]
serde = []
anchor = []
anchor-idl-build = []

[dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }